<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunningAssistant</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_RecordData"> Data</string>
    <string name="title_activity_statistics"> Statistics</string>
    <string name="title_activity_speedGraph"> Speed Graph</string>
    <string name="title_activity_distanceGraph"> Distance Graph</string>
    <string name="title_activity_calorieGraph"> Calorie Graph</string>
    <string name="title_activity_userprofile">Settings</string>
    <string name="page1_title">USER PROFILE</string>
    <string name="userprofile"> User Profile</string>
    <string name="group1">Map Function</string>
    <string name="data">Data</string>
    <string name="statistics"> Statistics</string>
    <string name="stepcounter">Step Counter</string>
    <string name="title_activity_step__counter_">Step Counter</string>
    <string name="hello_world">Hello world!</string>
    <string name="notification_subtitle">Counting your steps</string>
    <string name="started">RunningAssistant started.</string>
    <string name="stopped">RunningAssistant stopped.</string>
    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="mph">MPH</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="export">Save to SDCard</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>
    <string name="back">Back</string>
    <string name="quit">Quit</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="initialvalue">0   Steps</string>
    <string name="initspeed">0.0   m/s</string>
    <string name="initdist">0.0   m</string>
    <string name="title_activity_distance_speed">DistanceSpeedActivity</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="time"> Time</string>
    <string name="calories">Calories</string>
    <string name="avespeed">0.0   m/s(Avg)</string>
    <string name="initcalorie">0.000   Cal</string>
    <string name="initclock">00:00:00</string>
    <string name="avespeedunit">m/s(Avg)</string>
    <string name="speedunit">m/s</string>
    <string name="stepunit">Steps</string>
    <string name="distanceunit">m</string>
    <string name="calorieunit">Cal</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="ageunit">Years</string>
    <string name="heightunit">Inches</string>
    <string name="weightunit">Lbs</string>
    <string name="clear">Clear</string>
    <string name="showmap">Show your path</string>
    <string name="findstore">Find Store</string>
    <string name="show_report">Show Report</string>
    <string name="gps_not_enabled">GPS Disabled</string>
    <string name="open_location_settings">Setting</string>
    <string name="Cancel">Cancel</string>
    <string name="network_not_enabled">Network Disabled</string>
    <string name="feedback">Feedback</string>
    <string name="bmi">BMI</string>
    <string name="confirm">Confirm</string>
    <string name="lowsensitivity">Low Sensitivity</string>
    <string name="highsensitivity">High Sensitivity</string>
    <string name="launch_screen_desc">Launch Screen</string>
    <string name="bmi_level">BMI_Level</string>
  	<string name="stepsense">Step Counter Sensitivity</string>
	<string name="message_battery">Running service is high batter consuming current battery level is lower than 50% do you want to start anyway?</string>
	<string name="ok"> OK</string>
	<string name="message_sensor">Senser is not avaliable, the step counter function will not work</string>
</resources>