<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvuserprofile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/userprofile"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvheight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvage"
        android:layout_below="@+id/tvage"
        android:layout_marginTop="20dp"
        android:text="@string/height"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvheight"
        android:layout_below="@+id/tvheight"
        android:layout_marginTop="22dp"
        android:text="@string/weight"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/value_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvage"
        android:layout_alignBottom="@+id/tvage"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvweight"
        android:ems="10"
        android:hint="@string/ageunit"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/value_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/value_age"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvheight"
        android:ems="10"
        android:hint="@string/heightunit"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/value_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvweight"
        android:layout_alignBottom="@+id/tvweight"
        android:layout_alignLeft="@+id/value_height"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/weightunit"
        android:inputType="number|numberDecimal" />

    <GridLayout
        android:id="@+id/gridLayout_userprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_alignParentBottom="true"
        android:columnCount="2"
        android:rowCount="2" >

        <Button
            android:id="@+id/btn_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center|right"
            android:layout_marginBottom="5dp"
            android:layout_row="0"
            android:background="@xml/custom_button"
            android:text="@string/bmi"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|left"
            android:layout_marginBottom="5dp"
            android:layout_row="0"
            android:background="@xml/custom_button"
            android:text="@string/clear"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|left"
            android:layout_row="1"
            android:background="@xml/custom_button"
            android:text="@android:string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center|right"
            android:layout_row="1"
            android:background="@xml/custom_button"
            android:text="@string/confirm"
            android:textColor="@color/white" />

    </GridLayout>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvuserprofile"
        android:layout_alignRight="@+id/value_weight"
        android:layout_below="@+id/value_weight"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/lowsensitivity" />

        <RadioButton
            android:id="@+id/heigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/highsensitivity" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvuserprofile"
        android:layout_below="@+id/tvuserprofile"
        android:layout_marginTop="41dp"
        android:text="@string/age"
        android:textSize="25sp" />

</RelativeLayout>