<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StepCounterActivity" 
     android:background="@drawable/background">

    <!--
            <Button
           android:id="@+id/showmap"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@id/reset"
           android:gravity="center_horizontal"
           android:text="@string/showmap" />
    -->

    <LinearLayout
        android:id="@+id/linearLayout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/linear_background"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bmi_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/step_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/initialvalue"
            android:textColor="@color/white"
            android:textSize="@dimen/value" />

        <TextView
            android:id="@+id/speedtext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/initspeed"
            android:textColor="@color/white"
            android:textSize="@dimen/value" />

        <TextView
            android:id="@+id/avespeedtext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/avespeed"
            android:textColor="@color/white"
            android:textSize="@dimen/value" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/initdist"
            android:textColor="@color/white"
            android:textSize="@dimen/value" />

        <TextView
            android:id="@+id/calorie"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/initcalorie"
            android:textColor="@color/white"
            android:textSize="@dimen/value" />

        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/initclock"
            android:textColor="@color/white"
            android:textSize="@dimen/value" />

        <TextView
            android:id="@+id/facketext2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reset"
        android:layout_alignTop="@+id/open"
        android:background="@xml/custom_quit"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pause"
        android:layout_alignBottom="@+id/pause"
        android:layout_alignLeft="@+id/linearLayout_main"
        android:background="@xml/custom_start"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pause"
        android:layout_alignBottom="@+id/pause"
        android:layout_alignRight="@+id/linearLayout_main"
        android:background="@xml/custom_reset"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/open"
        android:layout_alignBottom="@+id/open"
        android:layout_alignLeft="@+id/start"
        android:background="@xml/custom_save"
        android:src="@drawable/save" />

    <Button
        android:id="@+id/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@xml/custom_open" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/open"
        android:layout_alignLeft="@+id/open"
        android:layout_marginBottom="16dp"
        android:background="@xml/custom_pause"
        android:gravity="center_horizontal" />

</RelativeLayout>